--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Quiz ninja</title>
+    <link rel="stylesheet" type="text/css" href="styles/index.css">
 </head>
 <body>
-
 </body>
 </html>
