add class for usage in ie8

--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,54 @@
     <![endif]-->
 </head>
 <body>
+<ul class="breadcrumb">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Library</a></li>
+    <li class="active">Book</li>
+</ul>
+<ul class="pagination">
+    <li><a href="#">&laquo;</a></li>
+    <li><a href="#">1</a></li>
+    <li><a href="#">2</a></li>
+    <li><a href="#" class="active">3</a></li>
+    <li><a href="#">4</a></li>
+    <li><a href="#">5</a></li>
+    <li class="active"><a href="#">&raquo;</a></li>
+</ul>
+<div class="gallery row">
+    <figure class="image col-4">
+        <figcaption class="caption">Alexander Amirov</figcaption>
+        <img src="https://pp.vk.me/c636818/v636818343/34bac/Ew_a2-bLfB4.jpg">
+    </figure>
+    <figure class="image col-4">
+        <figcaption class="caption">Alexander Amirov</figcaption>
+        <figcaption class="caption">Alexander Amirov</figcaption>
+        <img src="https://pp.vk.me/c636818/v636818343/34bac/Ew_a2-bLfB4.jpg">
+    </figure>
+    <figure class="image col-4">
+        <figcaption class="caption">Alexander Amirov</figcaption>
+        <img src="https://pp.vk.me/c636818/v636818343/34bac/Ew_a2-bLfB4.jpg">
+    </figure>
+    <figure class="image col-4">
+        <figcaption class="caption">Alexander Amirov</figcaption>
+        <img src="https://pp.vk.me/c636818/v636818343/34bac/Ew_a2-bLfB4.jpg">
+    </figure>
+    <figure class="image col-4">
+        <figcaption class="caption">Alexander Amirov</figcaption>
+        <img src="https://pp.vk.me/c636818/v636818343/34bac/Ew_a2-bLfB4.jpg">
+    </figure>
+    <figure class="image col-4">
+        <figcaption class="caption">Alexander Amirov</figcaption>
+        <img src="https://pp.vk.me/c636818/v636818343/34bac/Ew_a2-bLfB4.jpg">
+    </figure>
+</div>
+<div class="modal-image">
+    <img src="#">
+    <span class="caption"></span>
+</div>
+<script src="scripts/components/modal-image.js" type="text/javascript"></script>
+<script type="text/javascript">
+    modal.bindImages('.gallery .image img');
+</script>
 </body>
 </html>
