complete expamle of usage all components

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,22 @@
     <li><a href="#">5</a></li>
     <li class="active"><a href="#">&raquo;</a></li>
 </ul>
+<div class="dropdown">
+    <span>Dropdown</span>
+    <div class="dropdown-content">
+        Hello my lovely world!
+    </div>
+</div>
+<div>
+    <div class="btn-group">
+        <button class="btn-primary">Prev</button>
+        <button class="btn-primary">Current</button>
+        <button class="btn-primary">Next</button>
+    </div>
+    <button class="btn-primary">Create</button>
+    <button class="btn-success">Update</button>
+    <button class="btn-danger">Delete</button>
+</div>
 <div class="gallery row">
     <figure class="image col-4">
         <figcaption class="caption">Alexander Amirov</figcaption>
