create basic layout (content scrolling, another blocks static)

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,8 @@
             </ul>
         </nav>
     </header>
+    <section class="main-content container">
+    </section>
     <footer class="main-footer container row">
         <ul class="social col-5 row">
             <li><a href="https://vk.com/id13941343"></a></li>
