--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
             </ul>
         </nav>
     </header>
-    <section class="main-content container">
+    <section class="content-wrapper container">
     </section>
     <footer class="main-footer container row">
         <ul class="social col-5 row">
