social opens in new window, add breadcrumb

--- a/public/index.html
+++ b/public/index.html
@@ -46,12 +46,15 @@
         </nav>
     </header>
     <section class="content-wrapper container">
+        <ol class="breadcrumb">
+            <li class="active">Home</li>
+        </ol>
     </section>
     <footer class="main-footer container row">
         <ul class="social col-5 row">
-            <li><a href="https://vk.com/id13941343"></a></li>
-            <li><a href="https://www.facebook.com/rocketpowered.amirov"></a></li>
-            <li><a href="https://plus.google.com/116132982972660532691"></a></li>
+            <li><a href="https://vk.com/id13941343" target="_blank"></a></li>
+            <li><a href="https://www.facebook.com/rocketpowered.amirov" target="_blank"></a></li>
+            <li><a href="https://plus.google.com/116132982972660532691" target="_blank"></a></li>
         </ul>
         <small class="copyright">&copy; Alexander Amirov</small>
     </footer>
