meta tags seo optimization

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="tests,quiz,online">
+    <meta name="description" content="Quiz ninja home page">
+    <meta name="keywords" content="tests,quiz,http quiz,www quiz,
+        quizzes online,free quiz,quiz questions,quiz game,quiz com,
+        quiz time,quiz test,testing,online testing,http testing,www testing,testing test com">
     <meta name="author" content="Alexander Amirov">
 
     <link rel="stylesheet" type="text/css" href="styles/index.css">
