--- a/public/contacts.html
+++ b/public/contacts.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Quiz ninja</title>
+    <title>Contacts</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Quiz ninja home page">
+    <meta name="description" content="Quiz ninja contacts page">
     <meta name="keywords" content="tests,quiz,http quiz,www quiz,
         quizzes online,free quiz,quiz questions,quiz game,quiz com,
         quiz time,quiz test,testing,online testing,http testing,www testing,testing test com">
     <meta name="author" content="Alexander Amirov">
 
-    <link rel="stylesheet" type="text/css" href="styles/index.css">
+    <link rel="stylesheet" type="text/css" href="styles/contacts.css">
 
     <!-- IE Support -->
     <!--[if lt IE 11]>
@@ -52,43 +52,15 @@
 </header>
 <section class="content-wrapper container row">
     <ol class="breadcrumb">
-        <li class="active">Home</li>
+        <li class="active">Contacts</li>
     </ol>
-    <section class="carousel row">
-        <section class="box panel panel-edu active col-12">
-            <h3 class="title">What is this?</h3>
-            <p class="description">
-                <strong>QuizNinja</strong> is a webapp with any kind of quizes.
-                Improve your skills in any of your hobbies: art, science, programming, languages.
-            </p>
-        </section>
-        <section class="box panel panel-start col-12">
-            <h3 class="title">Start your way</h3>
-            <p class="description">
-                Our webapp does not need any registration or other extra steps.
-                Just go to <a href="#" class="link">Quiz</a> page and find any quiz that you can imagine.
-            </p>
-        </section>
-        <section class="box panel panel-contribute col-12">
-            <h3 class="title">Contribute</h3>
-            <p class="description">
-                If you are confident enough you can develop your own quiz.
-                Use our quiz designer that has very simple interface.
-            </p>
-        </section>
-        <div class="controls control-prev"></div>
-        <div class="controls control-next"></div>
-    </section>
-    <section class="info">
-        <h2 class="title">Quiz</h2>
-        <p class="description">
-            A quiz is a form of game or mind sport, in which the players (as individuals or in teams) attempt to answer
-            questions correctly. In some countries, a quiz is also a brief assessment used in education and similar
-            fields to measure growth in knowledge, abilities, and/or skills.
-            Quizzes are usually scored in points and many quizzes are designed to determine a winner from a group of
-            participants – usually the participant with the highest score.
-        </p>
-    </section>
+    <address class="contact-info">
+        <p><strong>Main Developer:</strong> Alexander Amirov</p>
+        <p><strong>Office:</strong> Ukraine, Kiev city, Polytechnic st, 6</p>
+        <p><strong>Email:</strong> xrocketmanx007@gmail.com</p>
+    </address>
+    <h2 class="map-title">Office location:</h2>
+    <div id="map"></div>
 </section>
 <footer class="main-footer container row">
     <ul class="social col-5 row">
@@ -98,10 +70,22 @@
     </ul>
     <small class="copyright">&copy; Alexander Amirov</small>
 </footer>
-<script src="scripts/components/carousel.js" type="text/javascript"></script>
-<script>
-    var carousel = new Carousel(document.querySelector('.carousel'));
-    carousel.start(15000, 'forward');
+<script type="text/javascript">
+    function initMap() {
+        var mapCanvas = document.getElementById('map');
+        var pos = {lat: 50.449, lng: 30.4652};
+        var mapOptions = {
+            center: pos,
+            zoom: 17
+        };
+        var map = new google.maps.Map(mapCanvas, mapOptions);
+        var marker = new google.maps.Marker({
+            position: pos,
+            map: map
+        });
+    }
 </script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHcAJBoK3MpoeI-K8bhXH0Kz_PgY2vZ4U&callback=initMap"
+        type="text/javascript"></script>
 </body>
 </html>
