--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
                     <span class="dropdown-title">Additional</span>
                     <ul class="dropdown-content sub-menu">
                         <li><a href="contacts.html">Contacts</a></li>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="about.html">About Us</a></li>
                     </ul>
                 </div>
             </li>
