create quizzes page

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <nav class="main-nav col-9 col-s-10">
         <ul class="menu row">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Quiz</a></li>
+            <li><a href="quizzes.html">Quiz</a></li>
             <li>
                 <div class="dropdown">
                     <span class="dropdown-title">Additional</span>
@@ -66,7 +66,7 @@
             <h3 class="title">Start your way</h3>
             <p class="description">
                 Our webapp does not need any registration or other extra steps.
-                Just go to <a href="#" class="link">Quiz</a> page and find any quiz that you can imagine.
+                Just go to <a href="quizzes.html" class="link">Quiz</a> page and find any quiz that you can imagine.
             </p>
         </section>
         <section class="box panel panel-contribute col-12">
