--- a/public/about.html
+++ b/public/about.html
@@ -37,7 +37,7 @@
     <nav class="main-nav col-9 col-s-10">
         <ul class="menu row">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Quiz</a></li>
+            <li><a href="quizzes.html">Quiz</a></li>
             <li>
                 <div class="dropdown">
                     <span class="dropdown-title">Additional</span>
